# alternative-encodings

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: draft-release.yml  tests.yml
alternative_encodings/: __init__.py  common.py  cp859.py  cp866i.py  romaji.py  viscii.py
tests/: test_cp859.py  test_cp866i.py  test_general.py  test_romaji.py  test_viscii.py  utils.py
